# ogk

./: .gitignore  Cargo.toml  default.env  readme.md
migrations/2021-02-25-141949_create_init_tables/: down.sql  up.sql
src/: client.rs  dm.rs  fm.rs  main.rs  schema.rs  vars.rs
src/commands/: Auth.rs  Config.rs  Fetch.rs  Init.rs  Run.rs  api.rs  mod.rs
src/dm/: models.rs  scheme.rs
src/utils/: auth.rs  config.rs  date.rs  io.rs  mod.rs  users.rs
