[package]
name = "realopen-rs"
version = "0.0.1"
authors = ["hoonyland <hoony@dotface.kr>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
bcrypt = "0.1"
bytes = "0.5"
chrono = "0.4"
clap = { version = "3.0.0-beta.1", features = ["suggestions", "color"] }
csv = "1.1"
diesel = { version = "1.4.4", features = ["chrono", "mysql", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3"
git2 = "0.13"
regex = "1"
reqwest = { version = "0.10", features = ["blocking", "cookies", "gzip", "json"] }
rust-crypto = "^0.2"
serde = "1.0.114"
serde_json = "1.0"
toml = "0.4.2"
tokio = { version = "0.2", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"