[package]
name = "realopen-rs"
version = "0.0.1"
authors = ["hoonyland <hoony@dotface.kr>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
bcrypt = "0.9"
bytes = "1.0.1"
chrono = "0.4"
clap = { version = "3.0.0-beta.1", features = ["suggestions", "color"] }
csv = "1.1"
dirs = "3.0.1"
diesel = { version = "1.4.4", features = ["chrono", "mysql", "r2d2"] }
dotenv = "0.15.0"
futures = "0.3"
git2 = "0.13"
regex = "1"
reqwest = { version = "0.11.1", features = ["blocking", "cookies", "gzip", "json"] }
rust-crypto = "^0.2"
serde = "1.0.114"
serde_json = "1.0"
toml = "0.5.8"
tokio = { version = "1.2.0", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"